--- a/lang/admin-expert-mode.pot
+++ b/lang/admin-expert-mode.pot
@@ -1,34 +1,37 @@
-# Translation of the WordPress plugin Admin Expert Mode 1.6 by Scott Reilly.
+# Translation of the WordPress plugin Admin Expert Mode v1.8 by Scott Reilly.
 # Copyright (C) 2011 Scott Reilly
-# This file is distributed under the same license as the Admin Expert Mode package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2011.
-#
-#, fuzzy
+# This file is distributed under the same license as the Admin Expert Mode plugin.
 msgid ""
 msgstr ""
-"Project-Id-Version: Admin Expert Mode 1.6\n"
+"Project-Id-Version: Admin Expert Mode 1.8\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/admin-expert-mode\n"
-"POT-Creation-Date: 2011-02-17 23:06-0500\n"
-"PO-Revision-Date: 2011-MO-DA HO:MI+ZONE\n"
+"POT-Creation-Date: 2011-12-15 20:16:09+00:00\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"PO-Revision-Date: 2010-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
-"Content-Transfer-Encoding: 8bit\n"
 
-#: admin-expert-mode.php:59
+#: admin-expert-mode.php:76
 msgid "Expert mode"
 msgstr ""
 
-#: admin-expert-mode.php:60
+#: admin-expert-mode.php:77
 msgid ""
 "Enable expert mode (if you are familiar with WordPress and don't need the "
 "inline documentation in the admin)."
 msgstr ""
 
-#: admin-expert-mode.php:98
-#, php-format
+#: admin-expert-mode.php:112
+msgid ""
+"Expert mode is now enabled for you since you had it previously enabled. You "
+"can disable it in your <a href=\"%s\" title=\"Profile\">profile</a>. "
+"Reminder: other admins must separately enable expert mode for themselves via "
+"their own profiles. (See the readme.txt for more advanced controls.)"
+msgstr ""
+
+#: admin-expert-mode.php:114
 msgid ""
 "<strong>NOTE:</strong> You must enable expert mode for yourself (in your <a "
 "href=\"%s\" title=\"Profile\">profile</a>) for it to take effect. Other "
